--- a/client/src/Components/AddMovie.css
+++ b/client/src/Components/AddMovie.css
@@ -3,9 +3,10 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.75);
+  backdrop-filter: blur(10px);
   border-radius: 2px;
   margin-right: 1rem;
-  padding:0.5rem;
+  padding:1rem;
 }
 
 .add-movie-button {
