--- a/client/src/Components/SearchBox.css
+++ b/client/src/Components/SearchBox.css
@@ -2,7 +2,7 @@
     backdrop-filter: blur(10px);
     background-color: rgba(0, 0, 0, 0.75);
     width: 90%;
-    height: 70%;
+    height: 65vh;
     color: white;
     border-radius: 3px;
     padding: 10px;
@@ -10,4 +10,23 @@
     display: flex;
     flex-wrap: nowrap;
     overflow: auto;
+    position: relative;
+}
+
+.search-box-close-button {
+    height: 1rem;
+    width: 1rem;
+    position: absolute;
+    border: none;
+    border-radius: 50%;
+    top: 1rem;
+    right: 2rem;
+    background: #F40612;
+    box-shadow: 0 6px 14px 0 #666;
+}
+
+.search-box-msg {
+    color: white;
+    font-size: 2rem;
+    margin: auto;
 }
