--- a/client/src/Components/SearchBox.css
+++ b/client/src/Components/SearchBox.css
@@ -14,8 +14,8 @@
 }
 
 .search-box-close-button {
-  height: 1rem;
-  width: 1rem;
+  height: 2rem;
+  width: 2rem;
   position: absolute;
   border: none;
   border-radius: 50%;
@@ -23,6 +23,9 @@
   right: 2rem;
   background: #f40612;
   box-shadow: 0 6px 14px 0 #666;
+  display: flex;
+  align-items: center;
+  justify-items: center;
 }
 
 .search-box-msg {
