--- a/client/src/Components/Container/Container.css
+++ b/client/src/Components/Container/Container.css
@@ -8,7 +8,7 @@
     position: absolute;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    background-image: url("../asserts/Background.jpg");
+    background-image: url("./Background.jpg");
     filter: brightness(50%);
     z-index: -1;
   }
